# ot_v3_0_c_rust

./: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/logic_api/: CMakeLists.txt
components/logic_api/include/: logic_api.h
components/rust_payload/: CMakeLists.txt
components/rust_payload/include/: rust_payload.h
components/rust_payload/rust/payload_parser/: Cargo.toml
components/rust_payload/rust/payload_parser/src/: lib.rs
main/: CMakeLists.txt  Kconfig.projbuild  coap_if.c  coap_if.h  config.h  config_portal.c  config_portal.h  config_store.c  config_store.h  idf_component.yml  io_board.c  io_board.h  logic.c  logic.h  logic_cli.c  logic_cli.h  main.c  main_v1.c  ot_app.c  ot_app.h  rgb_led.c  rgb_led.h  tfmini.c  tfmini.h
